Created main menu and style for him.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,10 +1,9 @@
-$sidenavWidth: 200px;
+$sidenavWidth: 400px;
 
 // Colors
 
-$color-white: #fff;
-$color-black: #000;
-$color-grey-dark-3: #333;
+$color-main-back: #fff;
+$color-font-main: #000;
  
 // Transition
 $transition-duration: 0.5s;
