--- a/src/scss/abstracts/_base.scss
+++ b/src/scss/abstracts/_base.scss
@@ -8,7 +8,6 @@ html {
 body {
 	// font-family: 'Futura','Trebuchet MS',Arial,sans-serif;
 	font-family: 'Muli', sans-serif;
-	// font-family: 'Futura Book';
 	height: 100%;
 	margin: 0;
 	* {
@@ -18,6 +17,6 @@ body {
 
 a {
 	text-decoration: none;
-	color: #fff;
+	color: #000;
 	outline: none;
 }
